#1 To trailers and trucks view added attachment widget

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2"
+        "php": ">=5.3.2",
+        "dbrisinajumi/d2files": "dev-master"
     }
 }
